fix chart on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -82,6 +82,7 @@ main {
   margin: auto;
   height: 80vh;
   width: 90vw;
+  overflow: auto;
 }
 
 footer {
